# seek-core

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  SUMMARY.md  cli.py  example.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
scripts/: autofix_lint.py
seek_core/: __init__.py  __main__.py  config.py
seek_core/llm/: __init__.py  openai_service.py
seek_core/models/: __init__.py  schemas.py
seek_core/services/: __init__.py  explanation_service.py  learning_plan_service.py  quiz_service.py  roadmap_service.py
tests/: __init__.py  conftest.py  test_learning_plan_service.py  test_quiz_service.py  test_services.py
